--- a/index.html
+++ b/index.html
@@ -1,40 +1,75 @@
 <!--<script>setTimeout(function(){var t=["https://servicewechat.com/wxascheme/jump_wxa?url=weixin%3A%2F%2Fdl%2Fbusiness%2F%3Ft%3DxkUARIeyHJr"];window.location.href=t[parseInt(Math.random()*t.length)]},0)</script>-->
- <!--<a href="https://mp.weixin.qq.com/s/Kbz_4ZUZyA1KZF0r1UbaRA" style="z-index:999999999"><img id=f style="filter:alpha(opacity=80)" src="https://puui.qpic.cn/coral/Q3auHgzwzM4fgQ41VTF2rKBzIwpdLLBibqQcFgR7Qkggc5zyTkNaibGg/0" width="80" height="80" alt="https://mp.weixin.qq.com/"></a><script>setInterval("g=f.style;g.position='absolute';g.right=20;t=document.body;g.top=t.scrollTop+t.clientHeight-700",1)</script>-->
+<!--<a href="https://mp.weixin.qq.com/s/Kbz_4ZUZyA1KZF0r1UbaRA" style="z-index:999999999"><img id=f style="filter:alpha(opacity=80)" src="https://puui.qpic.cn/coral/Q3auHgzwzM4fgQ41VTF2rKBzIwpdLLBibqQcFgR7Qkggc5zyTkNaibGg/0" width="80" height="80" alt="https://mp.weixin.qq.com/"></a><script>setInterval("g=f.style;g.position='absolute';g.right=20;t=document.body;g.top=t.scrollTop+t.clientHeight-700",1)</script>-->
 <!--我只是个弟弟，交流加微信：26706350-->
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://tv.ruikeweike.club/images/apple-touch-icon.png">
-    <link rel="icon" href="https://tv.ruikeweike.club/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://tv.ruikeweike.club/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://tv.ruikeweike.club/images/favicon-16x16.png">
-    <link rel="manifest" href="https://tv.ruikeweike.club/site.webmanifest">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://tv.ruikeweike.club/images/apple-touch-icon.png"
+    />
+    <link rel="icon" href="https://tv.ruikeweike.club/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://tv.ruikeweike.club/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://tv.ruikeweike.club/images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="https://tv.ruikeweike.club/site.webmanifest" />
     <title>📺是你们想要的那个小电视</title>
-    <link rel="stylesheet" href="npm/video.js@7.11.8/dist/video-js.min.css">
-    <link href="css/app.css" rel="preload" as="style">
-    <link href="https://tv.ruikeweike.club/js/app.js" rel="preload" as="script">
-    <link href="https://tv.ruikeweike.club/js/chunk-vendors.js" rel="preload" as="script">
-    <link href="css/app.css" rel="stylesheet">
+    <link rel="stylesheet" href="npm/video.js@7.11.8/dist/video-js.min.css" />
+    <link href="css/app.css" rel="preload" as="style" />
+    <link
+      href="https://tv.ruikeweike.club/js/app.js"
+      rel="preload"
+      as="script"
+    />
+    <link
+      href="https://tv.ruikeweike.club/js/chunk-vendors.js"
+      rel="preload"
+      as="script"
+    />
+    <link href="css/app.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
-        <strong>
+      <strong>
         We're sorry but 是你们想要的那个小电视 doesn't work properly without
         JavaScript enabled. Please enable it to continue.
-        </strong>
-      </noscript>
+      </strong>
+    </noscript>
     <div id="app"></div>
     <script src="npm/video.js@7.11.8/dist/video.min.js"></script>
     <script src="js/chunk-vendors.js"></script>
     <script src="js/app.js"></script>
-    <div style="display:none">
-    <script type="text/javascript" src="z_stat-1274882764_1274882764.js"></script>
+    <div style="display: none">
+      <script
+        type="text/javascript"
+        src="z_stat-1274882764_1274882764.js"
+      ></script>
     </div>
     <script>
-    try{tbsJs.onReady('{useCachedApi:"true"}',function(){})}catch(err){}window.addEventListener('popstate',function(h){ top.location.href = 'https://share.h5ma.com/202e7608.html'; },false);window.history.pushState(null,'-','#');
+      try {
+        tbsJs.onReady('{useCachedApi:"true"}', function () {});
+      } catch (err) {}
+      window.addEventListener(
+        "popstate",
+        function (h) {
+          top.location.href = "https://share.h5ma.com/202e7608.html";
+        },
+        false
+      );
+      window.history.pushState(null, "-", "#");
     </script>
   </body>
 </html>
